--- a/package.json
+++ b/package.json
@@ -27,7 +27,5 @@
         "webpack-cli": "^3.3.11",
         "webpack-userscript": "^2.5.1"
     },
-    "dependencies": {
-        "binary-search": "^1.3.6"
-    }
+    "dependencies": {}
 }
