--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint src/**/*.js",
+        "format": "eslint src/**/*.js --fix",
         "build": "webpack"
     },
     "author": "vapour101",
@@ -22,6 +24,9 @@
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.0.6",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "prettier": "1.19.1",
         "terser-webpack-plugin": "^2.3.5",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
