--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "eslint src/**/*.js",
         "format": "eslint src/**/*.js --fix",
-        "build": "webpack"
+        "build": "webpack && eslint dist/*.user.js --fix"
     },
     "author": "vapour101",
     "devDependencies": {
@@ -28,6 +28,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "prettier": "1.19.1",
         "terser-webpack-plugin": "^2.3.5",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
         "webpack-userscript": "^2.5.1"
