--- a/package.json
+++ b/package.json
@@ -26,11 +26,23 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-prettier": "^3.1.2",
+        "husky": "^4.2.3",
+        "lint-staged": "^10.0.8",
         "prettier": "1.19.1",
         "terser-webpack-plugin": "^2.3.5",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
         "webpack-userscript": "^2.5.1"
     },
-    "dependencies": {}
+    "dependencies": {},
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.js": "eslint --cache --fix",
+        "*.json": "prettier --write",
+        ".prettierrc": "prettier --write"
+    }
 }
