--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-prettier": "^3.1.2",
+        "html-loader": "^0.5.5",
         "husky": "^4.2.3",
         "lint-staged": "^10.0.8",
         "prettier": "1.19.1",
