--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
         "@babel/preset-env": "^7.8.7",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.0.6",
+        "css-loader": "^3.4.2",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-prettier": "^3.1.2",
         "html-loader": "^0.5.5",
         "husky": "^4.2.3",
         "lint-staged": "^10.0.8",
+        "node-sass": "^4.13.1",
         "prettier": "1.19.1",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
         "terser-webpack-plugin": "^2.3.5",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
